# prod

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Django_Cache/mysite/mysite/: settings.py
Django_Cache/mysite/shopapp/: urls.py  views.py
import_export/mysite/mysite/: sitemaps.py  urls.py
import_export/mysite/shopapp/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
logging/: Dockerfile  requirements.txt
logging/mysite/mysite/: settings.py  urls.py
logging/mysite/shopapp/: forms.py  views.py
mysite/: index.html  requirements.txt
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: views.py
mysite/myauth/: urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  login.html  (+2 more)
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_archived_product_created_at_product_discount_and_more.py  0003_order.py  0004_order_user.py  0005_order_products.py  0006_product_created_by.py  0007_alter_order_options_alter_product_options.py
prod/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: views.py
(+22 files in other folders)
