[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Chatikyan Razmik <chatikyanrazmik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.0"
django-filter = "22.1"
django-debug-toolbar = "4.0.0"
pillow = "10.4.0"
gunicorn = "^23.0.0"
djangorestframework = "3.14.0"
packaging = "24.1"
pytz = "2024.1"
asgiref = "3.8.1"
sqlparse = "0.5.1"
tzdata = "2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
