[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Chatikyan Razmik <chatikyanrazmik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
