[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Chatikyan Razmik <chatikyanrazmik@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-rest-framework = "^0.1.0"
django-filter = "^24.3"
django-debug-toolbar = "4.0.0"
gunicorn = "^23.0.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
